# domnode

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/domnode/: __init__.py  node.py
src/domnode/filters/: __init__.py
src/domnode/filters/preset/: __init__.py  all.py  semantic.py  visible.py
src/domnode/filters/semantic/: __init__.py  attributes.py  empty.py  presentational.py  wrappers.py
src/domnode/filters/visibility/: __init__.py  css_hidden.py  non_visible_tags.py  zero_dimensions.py
src/domnode/parsers/: cdp.py  html.py
tests/: __init__.py  test_filters_preset.py  test_filters_semantic.py  test_filters_visibility.py  test_node.py  test_parsers.py
