[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domnode"
version = "0.2.0"
description = "DOM nodes with browser rendering data for web automation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Steve Wang", email = "steve.z.wang@gmail.com"}
]
keywords = [
    "dom", "html", "parser", "web-automation", "browser", "cdp",
    "selenium", "playwright", "puppeteer", "web-scraping"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "lxml>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/steve-z-wang/domnode"
Repository = "https://github.com/steve-z-wang/domnode"
Issues = "https://github.com/steve-z-wang/domnode/issues"
Changelog = "https://github.com/steve-z-wang/domnode/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
